caspar (    )

  * more bugfixes: generating pdf from LaTeX was broken since caspar 20030716.
  * mk/docbook.mk: now uses pdflatex for generating PDF directly from LaTeX
    (without intermediate PostScript).  calls latex 3 times: make sure tocs
    get created.  no longer uses ps2pdf.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  ....

caspar (20030718)

  * bugfix release
  * mk/docbook.mk: run pdfjadetex 3 times: fixes toc. rm -f intermediate
    files: no sure wether they will get created. added license referal

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Fri, 18 Jul 2003 11:12:43 +0200

caspar (20030716)

  * TODO: I'd like a TOC in HTML output from DocBook. (Even while we're doing
    nochunks mode)
  * README: added link to http://www.miwie.org/docbkmake/ , which seems
    similar to docbook.mk in it's goals
  * mk/docbook.mk: use pdfjadetex for generating pdf: fonts look better

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Wed, 16 Jul 2003 21:03:17 +0200

caspar (20030331)

  * mk/caspar.mk: ommitting SDIR results in scp to get skipped
  * mk/caspar.mk: added SUHS hack: now possible to install on multiple hosts.
  * mk/docbook.mk: sane default target added.
  * mk/Makefile.am: some fiddling to get make distcheck working with
    automake 1.7
  * README: documented new tricks.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Mon, 31 Mar 2003 22:04:18 +0200

caspar (20030203)

  * TODO: Found bug in caspar.mk.
  * README: Added note about cvs-conf.  Added pointer to Debian package.
    Added note about usage with rsync.
  * mk/pod.mk: Added: support for typesetting Perl's Plain Old Documentation.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Mon, 03 Feb 2003 16:23:09 +0100

caspar (20020331)

  * mk/docbook.mk: jade will quit after max 10 errors, not 200: we will be
    able to see the very first error without having to scroll back.  Added
    support for DocBook SGML sourcefiles.  Added some more comments on usage.