@@ -1,10 +1,19 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.5 2002-03-13 12:11:17 joostvb Exp $
+## $Id: Makefile.am,v 1.6 2003-08-02 21:41:12 joostvb Exp $
 
-VERSION: ChangeLog
+# This script is free software; you can distribute it and/or modify it
+# under the terms of the GNU GPL.  See the file COPYING.
+
+## Copyright (C) 2003 Joost van Baal
+
+VERSION.m4: ChangeLog
 	./setversion
 
-VERSION = @VERSION@
+CONFIGURE_DEPENDENCIES = VERSION.m4
+
+## used in make dist[check]
+VERSION = @PACKAGE_VERSION@
+PACKAGE = @PACKAGE_TARNAME@
 
 SUBDIRS = mk sgml
 
@@ -13,6 +22,5 @@ doc_DATA = AUTHORS COPYING ChangeLog README THANKS TODO
 
 ## Only files from the current directory or from subdirectory which
 ## don't have their own Makefile.am should be listed here.
-EXTRA_DIST = \
-   VERSION
+EXTRA_DIST = bootstrap setversion VERSION.m4
 
