@@ -1,1 +1,8 @@
-echo "`date +%Y%m%d`" > VERSION
+# $Id: setversion,v 1.3 2003-08-02 21:41:12 joostvb Exp $
+
+# This script is free software; you can distribute it and/or modify it
+# under the terms of the GNU GPL.  See the file COPYING.
+
+echo 'm4_define([CASPAR_VERSION], ['`date +%Y%m%d`'])' > VERSION.m4
+# compatibility with other mdcc.cx/ad1810 packages
+date +%Y%m%d > VERSION
